MM comments up until case study

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -98,7 +98,7 @@
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions. using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species. As a case study, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management, xxx and yyyy  that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management, xxx and yyyy  that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
@@ -122,7 +122,7 @@
         To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological communities, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of an element - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring elements in a neighbour-density dependant model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements/species which were observed to co-occur. Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. [Maybe move this sentence]
 
     \paragraph{}
-        Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This species may still, however, potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to these unknown interactions, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that elements typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two elements' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
+        Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are less likely to be found. These rarer species may still, however, potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to these unknown interactions, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we describe a model which assumes that unrealised interactions can be simplified such that elements typically have a singular impact on and a singular response to neighbours independant of neighbour identity (response and impact model, or RIM). An unrealised interaction is therefore the product of two elements' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the RIM applies only to those unrealised interactions. 
 
 
     \subsubsection*{Parameter estimation and validation}
@@ -134,7 +134,7 @@
 
     \subsubsection*{Application to case study data}
 
-        The joint model was first applied to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where elements consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution. We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
+        The joint model was first applied to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where elements consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link. We conducted a posterior predictive check comparing simulated performance data to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. The model returned estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which 60\% were observed (realised).  When accounting for focal species only, 86.4\% of interactions were observed and estimated by the NDDM. NDDM and RIM estimates matched well and followed similar distributions (S.I. Figure \ref{fig:adist}) as enforced by the framework. 
     
 
 
@@ -154,21 +154,14 @@
     \end{figure}
   
 
-    \subsection{Building an interaction matrix}
+    \subsection{Scaling the interactions}
     
     \paragraph{}
-	The interaction matrix resulting from the joint model captures the likely effects of neighbours on the performance of focal elements. Differences in the magnitude of these interaction terms reflect differences in intrinsic performance (performance in the absence of neighbours, either competitive or facilitative) of the focal elements. In order to make interactions comparable between elements which may have very different vaseline values of performance, interaction terms can be rescaled by dividing them by the returned values for intrinsic performance. 
+	The interaction matrix resulting from the joint model captures the likely effects of neighbours on the performance of focal elements. Differences in the magnitude of these interaction terms reflect differences in intrinsic performance (performance in the absence of neighbours, either competitive or facilitative) of the focal elements. In order to make interactions comparable between elements which may have very different baseline values of performance, interaction terms can be rescaled by dividing them by the returned values for intrinsic performance. 
 
 
     \paragraph{}
-    In order to understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In the wildflower case study illustrated here, models of plant population dynamics are necessary to translate interaction effects on performance to interaction effects on growth rates and thus future patterns of abundance and diversity. 
-These per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth rather than performance. 
-
-    In our example, seed production serves as a measure of performance but other variables which can be linked to population growth such as biomass or height are also appropriate. By introducing key species-specific demographic rates (seed survival and germination rate) into the rescaling of the interaction effects
-
-
-    Using a system-appropriate population dynamic model to guide us, we incorporated key species-specific demographic rates (seed survival and germination rate) into the rescaling of the interaction effects to return \textit{per-capita} interaction strengths. We showcase this process in the Methods, but the exact steps and rescaling needed will vary according to the model chosen. 
-
+    In order to understand how the returned interaction matrix may affect system-wide behaviour, it is useful to also integrate interaction estimates into an overarching model describing the dynamics of the elements in the community. In the wildflower case study illustrated here, models of plant population dynamics are necessary to link interaction effects on performance to patterns of abundance and diversity. In our example, seed survival and germination rates were used to rescale interaction effects on seed production (our measure of performance) into \textit{per-capita} interaction effects on species growth rates. In other cases where different measures of performance are used (e.g. biomass or height), the species-specific demographic rates to be included and the rescaling formula must be derived from a system-appropriate population dynamic model, as illustrated in the Methods. The resulting per-capita interaction strengths allow us to draw inferrences about how elements may affect each other's growth and future abundances, which is particularly useful for a range of ecological applications as we further illustrate below. \\
 
     \subsection{Case study results}
 
